# DR-Solution

cpp-bmr/: CMakeLists.txt  README.md  TestBMR.cpp  bmr.hpp
cpp-hpv/: CMakeLists.txt  README.md  TestHPV.cpp  hpv.hpp
cpp-npl/: .gitignore  CMakeLists.txt  LICENSE  TestCopy.cpp  TestNPL.cpp  npl.hpp
cpp-npl/DOCS/: Doxyfile
cpp-npl/INCLUDE/: CDevice.hpp  CDeviceSocket.hpp  CDispatcher.hpp  CListener.hpp  CMessage.hpp  CProtocol.hpp  CProtocolFTP.hpp  CProtocolHTTP.hpp  CProtocolWS.hpp  CSubject.hpp  Common.hpp
cpp-osl/: CMakeLists.txt  Test.cpp  osl.hpp
cpp-osl/INCLUDE/: encryption.hpp  json.hpp  osd.hpp  string.hpp  util.hpp
cpp-rct/: CMakeLists.txt  DR_HyperV.psm1  README.md  Test.cpp  rct.hpp
cpp-rct/INCLUDE/: checkpoint.hpp  db.hpp  export.hpp  ps.hpp  util.hpp
cpp-sql/: CMakeLists.txt  README.md  TestSQL.cpp  sql.hpp
cpp-vhd/: CMakeLists.txt  README.md  TestVHD.cpp  libvd.hpp  vhd.hpp  vhdx.hpp
cpp-vhd/INCLUDE/: BaseDisk.hpp  DynVHD.hpp  DynVHDx.hpp  formats.hpp  rct.hpp
cpp-vhd/TOOLS/: Blockdiff.cpp  CMakeLists.txt  Dumpsectors.cpp
cpp-vss/: CMakelists.txt  README.md  TestVSS.cpp  libvss.hpp
cpp-vss/src/: query.cpp  shadow.cpp  shadow.h  vssclient.cpp  vssclient.h  writer.cpp  writer.h
